--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-around;
   color: white;
+  flex-wrap: wrap;
 }
 
 .forecast h1 {
@@ -15,5 +16,19 @@
 .highLow {
   display: flex;
   justify-content: center;
+}
+
+.oneDay {
+  padding: 10px;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.288);
+  border-radius: 7px;
+}
+.date {
+  margin-top: 0;
 }
 
