--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,38 @@
   margin-top: 0;
 }
 
+.error {
+  font-size: 1rem;
+}
+
+header {
+  height: 50px;
+  width: 100vw;
+  background-color: rgb(18, 18, 92);
+  color: white;
+  position: relative;
+}
+
+header h1 {
+  margin-top: 0px;
+  font-size: 1rem;
+  position: absolute;
+  top: 12px;
+  left: 50px;
+}
+
+header h2 {
+  margin-top: 0px;
+  font-size: 1rem;
+  position: absolute;
+  top: 12px;
+  left: 127px;
+}
+
+header img {
+  position: absolute;
+  height: 20px;
+  width: auto;
+  left: 100px;
+  top: 10px;
+}
