--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,24 @@
   text-align: center;
 }
 
-.forecast {
+
+/* CITY TITLE STYLING */
+
+.weatherCard h1 {
+  color: #808080;
+}
+
+.cityTitle {
+  color: #808080;
+}
+
+/* WEATHER CARD STYLING */
+
+.weatherCard {
   display: flex;
   justify-content: space-around;
   color: white;
   flex-wrap: wrap;
-}
-
-.forecast h1 {
-  color: black;
 }
 
 .highLow {
@@ -25,8 +34,15 @@
 .container {
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.288);
+  background-color: rgba(0, 0, 0, 0.384);
   border-radius: 7px;
+}
+
+.container h2 {
+  font-size: 3rem;
+}
+.container img {
+  height: 60px;
 }
 .date {
   margin-top: 0;
@@ -36,19 +52,22 @@
   font-size: 1rem;
 }
 
+/* HEADER STYLING */
+
 header {
-  height: 50px;
+  height: 40px;
   width: 100vw;
-  background-color: rgb(18, 18, 92);
+  background-color: rgba(0, 4, 37, 0.925);
   color: white;
   position: relative;
+  margin-bottom: 30px;
 }
 
 header h1 {
   margin-top: 0px;
   font-size: 1rem;
   position: absolute;
-  top: 12px;
+  top: 10px;
   left: 50px;
 }
 
@@ -56,7 +75,7 @@ header h2 {
   margin-top: 0px;
   font-size: 1rem;
   position: absolute;
-  top: 12px;
+  top: 10px;
   left: 127px;
 }
 
@@ -65,5 +84,37 @@ header img {
   height: 20px;
   width: auto;
   left: 100px;
-  top: 10px;
+  top: 8px;
+}
+
+/* INPUT STYLING */
+
+input {
+  border: none;
+  font-size: 1.3rem;
+  padding: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.411);
+  margin: 10px;
+  width: 340px;
+  color: #808080;
+}
+
+input:focus {
+  outline: none;
+}
+
+/* BUTTON STYLING */
+
+button {
+  padding: 5px 20px;
+  background: linear-gradient(rgba(2, 24, 218, 0.925), rgba(0, 4, 37, 0.925));
+  color: white;
+  border: none;
+  font-size: 1.3rem;
+  border-radius: 5px;
+}
+
+button:hover {
+  padding: 5px 20px;
+  background: linear-gradient(rgba(0, 4, 37, 0.925), rgba(2, 24, 218, 0.925));
 }
